# ME468-4359

./: README.md
assignments/a02/: Q4data.py  Q4data.txt  demoPackage.py  mat-vecMult.py  recursiveBisect.py.py  run_script.sh  run_script_Q4.sh  sortME468.py
assignments/a05/: slider_crank_1.py  slider_crank_2.py
assignments/a06/: DoubleWishboneReduced.json  wheeled_vehicle_1.py
assignments/a07/: publisher_member_function.py
assignments/a11/: a11_p2a.py  a11_p2c.py  a11_p2d.py
final-project/: launch_SLAM.py  readme.md
final-project/data/: DriverData.txt  DriverData2.txt  mono.yaml  object_locations.csv  stereo.yaml
final-project/src/custom_msgs/: CMakeLists.txt  package.xml
final-project/src/custom_msgs/msg/: Object.msg  ObjectList.msg  VehicleInput.msg  VehicleState.msg
final-project/src/final_project/: CMakeLists.txt  package.xml
final-project/src/final_project/data/control/: figure_8_v0.csv  smallest_radius_left.csv  smallest_radius_right.csv
final-project/src/final_project/data/object_detection/: object_locations.csv  object_locations_2.csv
final-project/src/final_project/data/path_planner/: circle_curve.csv  sin_curve_1.csv  sin_curve_2.csv  square_curve.csv  straight_path.csv
final-project/src/final_project/scripts/: control_open_loop.py  control_path_follower.py  localizer.py  object_detection_from_file.py  object_recognition.py  path_planner.py  path_planner_from_file.py  simulation.py
final-project/src/final_project/src/: publisher_member_function.cpp  slam_node_mono.cpp  slam_node_stereo.cpp  subscriber_member_function.cpp
final-project/stereo_calibration/: README.md  camera_calibrate.py
